--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan.adoc
@@ -1,7 +1,7 @@
 [id="Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan"]
 = Creating a CSV file to add virtual machines to the migration plan
 
-If you are migrating a large number of virtual machines or xref:Remigrating_virtual_machines[re-migrating] virtual machines, you can create a CSV file to add the source virtual machines to the migration plan.
+If you are migrating a large number of virtual machines, you can create a CSV file to add the source virtual machines to the migration plan. If you are xref:Remigrating_virtual_machines[re-migrating virtual machines], you must use a CSV file.
 
 The virtual machine `Name` is mandatory. `Provider`, `Host`, and `Cluster` are optional, to differentiate identical virtual machine names in different environments.
 
