--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_and_Running_a_Migration_Plan.adoc
@@ -5,17 +5,19 @@ The infrastructure migration involves the following key tasks:
 
 . xref:Pre_migration_tasks[Pre-migration tasks]:
 
-* If you are migrating a large number of virtual machines or re-migrating virtual machines, create a xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file] to add the virtual machines to the migration plan.
+* *CSV file:* If you are migrating a large number of virtual machines, you can create a xref:Creating_a_csv_file_to_add_virtual_machines_to_the_migration_plan[CSV file] to add the virtual machines to the migration plan.
++
+If you are xref:Remigrating_virtual_machines[re-migrating virtual machines], you must use a CSV file to add the virtual machines because the migration plan cannot re-discover them.
 
-* If you are using Ansible to automate pre- and post-migration tasks, set up the xref:Setting_up_an_ansible_environment[Ansible environment].
+* *Ansible environment:* If you are using Ansible to automate pre- and post-migration tasks, you must set up an xref:Setting_up_an_ansible_environment[Ansible environment].
 
-* If you are migrating RHEL or other Linux virtual machines, set up the xref:Setting_up_an_ansible_environment[Ansible environment] and configure the xref:Configuring_the_rhel_premigration_playbook[RHEL pre-migration playbook].
+* *RHEL pre-migration playbook:* If you are migrating RHEL or other Linux virtual machines, you must set up an xref:Setting_up_an_ansible_environment[Ansible environment] and create a xref:Configuring_the_rhel_premigration_playbook[RHEL pre-migration playbook].
 
 . xref:Creating_a_migration_plan[Creating the migration plan]
 
 . xref:Running_a_migration_plan[Running the migration plan] immediately or scheduling it to run in the future
 
-You can xref:Canceling_a_migration_plan[cancel] a migration plan.
+You can xref:Canceling_a_migration_plan[cancel] a migration plan in progress.
 
 include::proc_Premigration_tasks.adoc[leveloffset=+1]
 
