--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_rhel_premigration_playbook.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_the_rhel_premigration_playbook.adoc
@@ -10,7 +10,7 @@ This role is required for both Red Hat Virtualization and OpenStack Platform mig
 
 The `RHEL pre-migration` role performs the following tasks on a source virtual machine:
 
-* Preserves the static IP address configuration by creating udev rules to associate the source virtual machine's MAC address with its new interface name (Red Hat Virtualization and OpenStack Platform)
+* Preserves the static IP address configuration by creating udev rules to associate the source virtual machine's MAC address with its existing interface name (Red Hat Virtualization and OpenStack Platform)
 * Installs the Red Hat Virtualization guest agent, which enables Red Hat Virtualization to report the IP address of the new virtual machine and to integrate it into the new environment (Red Hat Virtualization only)
 
 To create a `RHEL pre-migration` playbook:
