edited wording in central admin to be more clear we only support these operations, added service retirement to list

--- a/doc-Deployment_Planning_Guide/topics/planning.adoc
+++ b/doc-Deployment_Planning_Guide/topics/planning.adoc
@@ -73,13 +73,18 @@ The following provides a summary of types of appliances:
 [[central-administration]]
 === Centralized Administration
 
-{product-title} includes centralized administration capabilities, where operations can be initiated from the global region and processed and executed on the remote region. This includes the following life cycle management operations:
+{product-title} includes centralized administration capabilities, where certain operations can be initiated from the global region and processed and executed on the remote region. 
+
+The following life cycle management operations can be initiated from the global region using centralized administration:
 
 * Virtual machine provisioning
-* Service provisioning
 * Virtual machine power operations
 * Virtual machine retirement
 * Virtual machine reconfiguration
+* Service provisioning
+* Service retirement
+
+{product-title_short} life cycle operations other than those listed above are not supported. 
 
 image:centralized_admin.png[Centralized Administration Diagram]
 
