--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Configuring_conversion_hosts_for_transformation.adoc
@@ -60,9 +60,10 @@ manageiq_validate_certs: _false_
 manageiq_zone_id: "42000000000001"
 
 # List of cloud or infrastructure providers
-# Each provider is a dictionary with 2 attributes: `name`, `connection_configurations`
+# Each provider is a dictionary with 3 attributes: `name`, `hostname`, and `connection_configurations`
 manageiq_providers:
   - name: "_RHV_"
+    hostname: _FQDN_or_IP_
     connection_configurations:
       - endpoint:
           role: "default"
@@ -93,6 +94,7 @@ manageiq_validate_certs: false
 manageiq_zone_id: "42000000000001"
 manageiq_providers:
   - name: "_OpenStack_"
+    hostname: _FQDN_or_IP_
     connection_configurations:
       - endpoint:
           role: "default"
