OSP 14 appliance works with OSP 13

--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_conversion_hosts.adoc
@@ -15,6 +15,8 @@ If you are migrating to OpenStack Platform:
 [NOTE]
 ====
 Always download the latest version of the OpenStack Platform conversion appliance because it contains patches and fixes.
+
+The conversion appliance for OpenStack Platform 14 may be used with OpenStack Platform 13.
 ====
 
 . Upload the appliance to Glance storage.
