--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Planning.adoc
@@ -1,10 +1,14 @@
-[[Planning]]
-= Planning
+[[Planning_the_migration]]
+= Planning the migration
 
-The planning phase of the migration has 2 key stages:
+During the planning phase, formulate a specific migration goal:
 
-* Creating an infrastructure mapping
-* Creating and running a migration plan
+Example: "I want to migrate 2000 virtual machines, with 200 TB of data, in less than 6 months."
 
-include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
-include::modules/proc_Creating_and_Running_a_Migration_Plan.adoc[leveloffset=+1]
+See the xref:Planning_questions[planning questions] for guidance in allocating resources. A xref:Migration_example[migration example] is provided so that you can estimate the time duration of the migration.
+
+xref:Best_practices_for_migration[Best practices for migration] help you tailor the migration so that it fits your needs and schedule.
+
+include::modules/ref_Planning_questions.adoc[leveloffset=+1]
+include::modules/ref_Migration_example.adoc[leveloffset=+1]
+include::modules/ref_Best_practices_for_migration.adoc[leveloffset=+1]
