--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Creating_an_Infrastructure_Mapping.adoc
@@ -1,39 +1,61 @@
 [[Creating_an_Infrastructure_Mapping]]
-= Creating an Infrastructure Mapping
+= Creating an infrastructure mapping
 
-.Migration Screen
-image:Compute_Manage_UI.png[]
+The infrastructure mapping maps your source resources to target resources.
 
-In CloudForms, create an infrastructure mapping to map your VMware resources to RHV resources:
+.Infrastructure Mappings screen
+image:Infrastructure_mappings_screen.png[]
 
-. Go to menu:Compute[Migration] and click *Create Infrastructure Mapping*.
-. Enter the name of your mapping and click *Next*.
-. Select a source cluster and a target cluster.
+.Prerequisite
+
+*Red Hat Virtualization only:* Before creating an infrastructure mapping, you must link:https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7/html-single/managing_providers/#authenticating_rhv_hosts[authenticate] the RHV conversion hosts. If the hosts are not authenticated, the mapping displays a xref:Infrastructure_mapping_missing_networks[missing networks error].
+
+.Procedure
+
+. Click menu:Compute[Migration > Infrastructure Mappings].
+. Click *Create Infrastructure Mapping*.
+. Perform the following procedures in each infrastructure mapping screen:
+
+[cols="1,3", options="header"]
+|===
+^|Screen ^|Procedure
+
+|*General*
+.<a|. Enter the infrastructure mapping name and (optional) description.
+. Select the target provider from the drop-down list.
+. Click *Next*.
+
+|*Map Compute*
+.<a|. Select a source cluster and a target Red Hat Virtualization cluster or OpenStack Platform project.
 +
-[NOTE]
-====
-A target cluster that does not contain a conversion host is marked with a warning icon (&#65279;image:warning.png[height=15px]&#65279;), which appears after a few seconds' delay for polling the clusters and refreshing the UI.
-====
+*Red Hat Virtualization only:* A target cluster that does not contain a conversion host displays a warning icon (&#65279;image:warning.png[height=15px]&#65279;). The icon appears after a few seconds' delay for polling the clusters and refreshing the UI.
+. Click *Add Mapping*. You can map additional clusters.
+. Click *Next*.
 
-. Click *Add Mapping* and *Next*.
+|*Map Storage*
+.<a|. Select a source cluster from the drop-down list.
+. Select a source datastore and a target Red Hat Virtualization datastore or OpenStack Platform volume type.
++
+*OpenStack Platform only:* If the target datastore is missing, see xref:OpenStack_storage_not_detected[Storage not detected].)
+. Click *Add Mapping*. You can map additional datastores.
+. Click *Next*.
 
-. Map the datastore of each cluster:
-
-.. Select the target cluster from the drop-down list.
-.. Select a source datastore and a target datastore.
-.. Click *Add Mapping* and *Next*.
-
-. Map the network of each cluster:
-
-.. Select the target cluster from the drop-down list.
-.. Select a source network and a target network.
-.. Click *Add Mapping*.
-
+|*Map Networks*
+.<a|. Select a source cluster from the drop-down list.
+. Select one or more source networks and a target network.
+. Click *Add Mapping*. You can map the networks of additional source clusters.
 . Click *Create*.
-. If a successful mapping message is displayed, click *Close*.
-+
-Your infrastructure mapping is displayed in menu:Compute[Migration].
-+
-image:infrastructure_mapping_created.png[]
 
-After creating an infrastructure mapping, create a migration plan.
+|*Results*
+.<a|Click *Close*. Your infrastructure mapping is saved in menu:Compute[Migration > Infrastructure Mappings].
+
+If error messages appear, see xref:Infrastructure_mapping_errors[Infrastructure mapping errors].
+|===
+
+[IMPORTANT]
+====
+If you add or remove providers or provider objects from an infrastructure mapping, the mapping will have xref:Infrastructure_mapping_missing_resources[missing resource errors]. You must re-create the infrastructure mapping.
+====
+
+After you have created a successful infrastructure mapping, you can create a  xref:Creating_and_running_a_migration_plan[migration plan].
+
