--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_matrix.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/ref_Software_compatibility_matrix.adoc
@@ -5,7 +5,7 @@ You must use the supported product versions for each IMS release:
 
 [cols="h,2,2"]
 |===
-|IMS Release |1.0 |1.1
+|IMS Release |link:https://access.redhat.com/documentation/en-us/red_hat_infrastructure_migration_solution/1.0/html/infrastructure_migration_solution_guide/[1.0] |1.1
 |VMware |5.5 or later |5.5 or later
 |Red Hat Virtualization |4.2.7 |4.2.8
 |CloudForms |4.6 |4.7
