fixed merge conflict

--- a/doc-General_Configuration/topics/Configuration.adoc
+++ b/doc-General_Configuration/topics/Configuration.adoc
@@ -2745,6 +2745,10 @@ Configuring database replication in this version of {product-title_short} automa
 
 Centralized administration in {product-title} supports life cycle management operations that can be initiated from the global copy and processed and executed on the remote copy.
 
+ifdef::cfme[]
+See _Centralized Administration_ in the https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/deployment_planning_guide/#central-administration[Deployment Planning Guide] for a complete list of life cycle operations supported by centralized administration and an overview of the feature.
+endif::cfme[]
+
 [IMPORTANT]
 ======
 * You must configure at least one remote copy before you can configure the global copy. Changes to the role of a {product-title} instance take several minutes to take effect.
@@ -2792,11 +2796,8 @@ image:add-subscription-global.png[Add Subscription]
 Once you configure a {product-title} instance to act as a global copy, and one or more other instances to act as remote copies, centralized administration is automatically enabled after the initial data sync is complete.
 ====
 
-Database replication and centralized administration are now enabled on your instances. Centralized administration supports life cycle management operations, including virtual machine power operations and retirement, that can be initiated from the global copy and processed and executed on the remote copy.
+Database replication and centralized administration are now enabled on your instances.
 
-ifdef::cfme[]
-See the section on _Centralized Administration_ in the https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/deployment_planning_guide/#central-administration[Deployment Planning Guide] for an overview of the feature.
-endif::cfme[]
 
 [[resetting-database-replication]]
 ===== Resetting Database Replication
