--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -13,12 +13,12 @@ The Infrastructure Migration Solution has the following key phases:
 
 . xref:Planning_the_migration[Planning the migration]
 +
-* Assessing the VMware and target environments to ensure sufficient resources for migration
+* Assessing the source and environments to ensure sufficient resources for migration
 * Formulating strategies to minimize the impact on users
 
 . xref:Preparing_the_environment_for_migration[Preparing the environment]
 +
-* Preparing the VMware environment
+* Preparing the source environment
 * Preparing the target environment
 * Creating and configuring the conversion hosts
 
