--- a/doc-High_Availability_Guide/topics/Installation.adoc
+++ b/doc-High_Availability_Guide/topics/Installation.adoc
@@ -48,7 +48,7 @@ Do not create a region at this stage in the procedure.
 
 You have now created the empty database. 
 
-To check the configuration on the appliance console details screen. If configured successfully, *Local Database Server* shows as `running (primary)`. 
+You can check the configuration on the appliance console details screen. If configured successfully, *Local Database Server* shows as `running (primary)`. 
 
 Running the `psql` command also provides information about the database.
 
