--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Conversion_host_considerations.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Conversion_host_considerations.adoc
@@ -1,13 +1,14 @@
 [id="Conversion_host_considerations"]
-= Conversion host considerations
+= Conversion host prerequisites
 
-Before creating the conversion hosts, you must consider the following questions, taking into account your environment and the size of the migration:
+Before you create the conversion hosts, you should determine how many conversion hosts you need and whether to use VDDK or SSH for the migration. The answers depend on the size of your environment.
 
-* How many conversion hosts do I need? (see xref:Number_of_conversion_hosts[])
-* Should I use VDDK or SSH transformation? (see xref:datapath_transformation_options_vddk_ssh[])
+
+
+Before creating the conversion hosts, you should decide how many hosts your migration will require and
 
 [[Number_of_conversion_hosts]]
-== Number of conversion hosts
+.Number of conversion hosts
 
 Because all the virtual machines in a migration plan are migrated at the same time, the number of conversion hosts you require depends on the number of virtual machines you are migrating. Multiple conversion hosts are recommended for load-balancing purposes, even for smaller migrations.
 
@@ -21,7 +22,7 @@ The maximum number of concurrent virtual machine migrations per conversion host 
 ====
 
 [[datapath_transformation_options_vddk_ssh]]
-== Transformation options: VDDK or SSH
+.Transformation options: VDDK or SSH
 
 You must select the transformation option, VDDK or SSH, that is appropriate for your migration size and environment:
 
