--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_migration_workflow.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/con_Vmware_to_rhv_migration_workflow.adoc
@@ -1,7 +1,7 @@
 [id="Vmware_to_rhv_workflow"]
-= VMware to Red Hat Virtualization workflow
+= VMware to Red Hat Virtualization migration workflow
 
-This workflow describes the process of migrating  from VMware to Red Hat Virtualization.
+This workflow describes the process of migrating from VMware to Red Hat Virtualization.
 
 image:vmware_to_rhv_migration_workflow.png[]
 
