--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/modules/proc_Preparing_the_vmware_source_environment.adoc
@@ -1,5 +1,5 @@
 [id="Preparing_the_vmware_source_environment"]
-= Preparing the VMware environment
+= Preparing the source environment
 
 Prepare the VMware source environment for migration:
 
@@ -22,4 +22,4 @@ The network configuration must not be changed in any way during the migration. I
 
 . Red Hat Virtualization only: Check that the names of source virtual machines do not duplicate virtual machine names in the target environment.
 
-You are ready to prepare the target environment, xref:Preparing_the_rhv_target_environment[Red Hat Virtualization] or xref:Preparing_the_osp_target_environment[OpenStack Platform].
+You are ready to xref:Preparing_the_target_environment[prepare the target environment].
