--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Infrastructure_migration_solution_overview.adoc
@@ -1,18 +1,13 @@
 [id='Infrastructure_migration_solution_overview']
 = Infrastructure Migration Solution overview
 
-Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate your virtual machines from VMware to Red Hat Virtualization or to Red Hat OpenStack Platform.
+Red Hat's Infrastructure Migration Solution (IMS) enables you to migrate your virtual machines from VMware to Red Hat Virtualization or to Red Hat OpenStack Platform:
 
-link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization] (RHV) is an enterprise-grade virtualization platform built on Red Hat Enterprise Linux. With Red Hat Virtualization, you can manage your entire virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
+* link:https://access.redhat.com/documentation/en-us/red_hat_virtualization/4.2/[Red Hat Virtualization] (RHV) is a virtualization platform built on Red Hat Enterprise Linux. You can manage your virtual infrastructure, including hosts, virtual machines, networks, storage, and users, from a centralized graphical user interface or with a REST API.
 
-link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/[Red Hat OpenStack Platform] provides the foundation to build a private or public Infrastructure-as-a-Service (IaaS) cloud on top of Red Hat Enterprise Linux. It offers a massively scalable, fault-tolerant platform for the development of cloud-enabled workloads.
+* link:https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/13/[Red Hat OpenStack Platform] enables you to build a private or public cloud on top of Red Hat Enterprise Linux. OpenStack Platform is scaleable and fault-tolerant.
 
-link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms] provides the user interface required to manage challenging enterprise environments.
-
-[NOTE]
-====
-Currently, IMS supports only cold migration. Virtual machines are powered off gracefully as part of the migration process.
-====
+The actual migration process is performed in link:https://access.redhat.com/documentation/en-us/red-hat-cloudforms[Red Hat CloudForms], a user interface for managing the infrastructure. CloudForms enables you to map your source and target environments and to create and run a migration plan.
 
 .Migration phases
 
@@ -38,5 +33,5 @@ The Infrastructure Migration Solution has 4 key phases:
 * Checking that the migration plan completed successfully
 * xref:Troubleshooting[Troubleshooting], if necessary
 
-include::modules/con_Vmware_to_rhv_workflow.adoc[leveloffset=+1]
-include::modules/con_Vmware_to_osp_workflow.adoc[leveloffset=+1]
+include::modules/con_Vmware_to_rhv_migration_workflow.adoc[leveloffset=+1]
+include::modules/con_Vmware_to_osp_migration_workflow.adoc[leveloffset=+1]
