--- a/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
+++ b/doc-Infrastructure_Migration_Solution_Guide/cfme/doc/assembly_Migration.adoc
@@ -6,10 +6,12 @@ Migrating the infrastructure involves the following key tasks:
 * Creating an xref:Creating_an_Infrastructure_Mapping[infrastructure mapping] to map the clusters, datastores, and networks of your source environment to your target environment
 
 * Creating and running a xref:Creating_and_running_a_migration_plan[migration plan]
++
+Optionally, you can xref:Canceling_a_migration_plan[cancel] a migration plan that is in progress and retry the migration in the future.
 
-[NOTE]
+[IMPORTANT]
 ====
-You can xref:Canceling_a_migration_plan[cancel] a migration plan that is in progress and retry the migration in the future.
+Currently, IMS supports only cold migration. Virtual machines are powered off gracefully as part of the migration process.
 ====
 
 include::modules/proc_Creating_an_Infrastructure_Mapping.adoc[leveloffset=+1]
